@@ -1,66 +1,57 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.entity.*;
+import com.example.demo.entity.Crop;
+import com.example.demo.entity.Farm;
+import com.example.demo.entity.Fertilizer;
+import com.example.demo.entity.Suggestion;
 import com.example.demo.repository.SuggestionRepository;
 import com.example.demo.service.CatalogService;
 import com.example.demo.service.FarmService;
 import com.example.demo.service.SuggestionService;
-
+import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Service
 public class SuggestionServiceImpl implements SuggestionService {
-
     private final FarmService farmService;
     private final CatalogService catalogService;
-    private final SuggestionRepository repo;
+    private final SuggestionRepository suggestionRepository;
 
-    public SuggestionServiceImpl(FarmService farmService,
-                                 CatalogService catalogService,
-                                 SuggestionRepository repo) {
+    public SuggestionServiceImpl(FarmService farmService, CatalogService catalogService, SuggestionRepository suggestionRepository) {
         this.farmService = farmService;
         this.catalogService = catalogService;
-        this.repo = repo;
+        this.suggestionRepository = suggestionRepository;
     }
 
     @Override
     public Suggestion generateSuggestion(Long farmId) {
         Farm farm = farmService.getFarmById(farmId);
+        
+        List<Crop> crops = catalogService.findSuitableCrops(farm.getSoilPH(), farm.getWaterLevel(), farm.getSeason());
+        String cropNames = crops.stream().map(Crop::getName).collect(Collectors.joining(","));
 
-        List<Crop> crops = catalogService.findSuitableCrops(
-                farm.getSoilPH(),
-                farm.getWaterLevel(),
-                farm.getSeason()
-        );
-
-        List<String> cropNames = crops.stream()
-                .map(Crop::getName)
-                .toList();
-
-        List<Fertilizer> fertilizers =
-                catalogService.findFertilizersForCrops(cropNames);
+        List<String> cropNameList = crops.stream().map(Crop::getName).collect(Collectors.toList());
+        List<Fertilizer> fertilizers = catalogService.findFertilizersForCrops(cropNameList);
+        String fertilizerNames = fertilizers.stream().map(Fertilizer::getName).collect(Collectors.joining(","));
 
         Suggestion suggestion = Suggestion.builder()
                 .farm(farm)
-                .suggestedCrops(String.join(",", cropNames))
-                .suggestedFertilizers(
-                        fertilizers.stream()
-                                .map(Fertilizer::getName)
-                                .collect(Collectors.joining(",")))
+                .suggestedCrops(cropNames) // Empty string if list is empty [cite: 231, 268]
+                .suggestedFertilizers(fertilizerNames)
                 .build();
-
-        return repo.save(suggestion);
+        
+        return suggestionRepository.save(suggestion);
     }
 
-    // ✅ STRONG RETURN TYPE
     @Override
-    public Suggestion getSuggestion(Long id) {
-        return repo.findById(id).orElse(null);
+    public Suggestion getSuggestion(Long suggestionId) {
+        return suggestionRepository.findById(suggestionId)
+            .orElseThrow(() -> new com.example.demo.exception.ResourceNotFoundException("Suggestion not found"));
     }
 
-    // ✅ STRONG RETURN TYPE
     @Override
     public List<Suggestion> getSuggestionsByFarm(Long farmId) {
-        return repo.findByFarmId(farmId);
+        return suggestionRepository.findByFarmId(farmId);
     }
 }
